# ChangeLog for games-fps/quake1-data
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2

  21 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl> quake1-data-2.40-r1.ebuild:
  Changed vispatch mirror to sf.net.

  16 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl> quake1-data-2.40-r1.ebuild:
  Removed "fetch" restriction

  16 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl> quake1-data-2.40-r1.ebuild:
  Updated the ebuild with Paul Bredbury fixes, bug #166704

  20 Sep 2007; Piotr Szymaniak <lazy_bum@o2.pl> quake1-data-2.40-r1.ebuild:
  Added "vispatch" flag for transparent water support.