@@ -1,4 +1,5 @@
 DIST id1_vis.tgz 949270 RMD160 b99dabf350ad432c62520436ff7975d6dd718c32 SHA1 4e50585cf1b67d36ffd2148eea78bfd5ddd225f7 SHA256 b16e400eaa650f30b17d8651c15ad4041b73270c97ad62cd62719b48be0d55f0
 DIST quake106.zip 9094045 RMD160 93770833400903ee17f05835fbc2004c5aed52d1 SHA1 f8a1a509b094ccdbed3c54b96f7d9b351c0898f5 SHA256 ec6c9d34b1ae0252ac0066045b6611a7919c2a0d78a3a66d9387a8f597553239
-EBUILD quake1-data-2.40-r1.ebuild 2302 RMD160 d02dc48f3f3bdcb41c69b6fc4d94e3908c0a7fec SHA1 4c1fe2c997e0ff55583de7904478a1ab74e819f0 SHA256 7d3fc04262930ab3e94e3e0a0c33c96e26facfe7ace560f92a507b4f211f0a4d
-MISC ChangeLog 597 RMD160 dfc3bbb516b1f827a0af643f710a45a402797052 SHA1 a5945114899316eaf7b52ba2a8b542daeda5c9f2 SHA256 05e96653efcbfe401e05dc23962212eefafab9da94af78c21d51793f834e95fb
+EBUILD quake1-data-2.40-r1.ebuild 2306 RMD160 82fc18095cb1e3f8277aabb2d7ba631803611e79 SHA1 14e7f6619f3674f24be3aa61f6c4c4ccc8d5129e SHA256 96942d528fc123529767c348ccc70f33c90b37eafccec9658ea74384a3a63077
+MISC ChangeLog 730 RMD160 885d821f2d32e162935ab14ddc1ed4365725818a SHA1 c682aced2312dcc853590afc4db7a45242d9f448 SHA256 3c9ad5e409d32cc0bc337dbfd9d37f2af72dae529258fc250cd0903c1386cc7d
+MISC metadata.xml 329 RMD160 a29fd8fd25dccfb5612fef75729d67b667576029 SHA1 fb5dcbc71e7e98ad979fedb301fbcadd8c7f801b SHA256 22304f414839b8d3e6437cd934f671c19e9594b7c29b467162a8619b4e5e5ac9
