@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<pkgmetadata>
+	<herd></herd>
+	<maintainer>
+		<email>lazy_bum@o2.pl</email>
+		<name>Piotr Szymaniak</name>
+	</maintainer>
+	<use>
+		<flag name='vispatch'>Adds patches for transparent water.</flag>
+	</use>
+</pkgmetadata>
+
