@@ -1,4 +1,4 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
@@ -55,7 +55,7 @@ src_unpack() {
 
 	if use vispatch; then
 		mv ID1.VIS id1.vis
-		vispatch -dir ${S}/id1 -data ${S}/id1.vis || die "vispatch failed"
+		vispatch -dir "${S}"/id1 -data "${S}"/id1.vis || die "vispatch failed"
 	fi
 }
 
