@@ -1,5 +1,9 @@
 # ChangeLog for games-fps/quake1-data
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+
+  02 Jan 2009; Piotr Szymaniak <lazy_bum@o2.pl> quake1-data-2.40-r1.ebuild,
+  +metadata.xml:
+  Use flags now in metadata (GLEP 56).
 
   21 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl> quake1-data-2.40-r1.ebuild:
   Changed vispatch mirror to sf.net.
